2011-01-30  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (hppa-hp-hpux10): Remove references to HP
	support sites.

2011-01-30  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi: Update copyright years.
	
2011-01-30  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (Binaries): Remove outdated reference for
	Motorola 68HC11/68HC12 downloads.

2011-01-30  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* doc/extend.texi (Thread-Local): Adjust reference to Ulrich
	Drepper's paper.

2011-01-29  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2010-08-22  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

        PR boehm-gc/34544
	* gthr-posix.h (__gthread_active_init): Delete.
	(__gthread_active_p): Do activity check here.
	Don't include errno.h on hppa-hpux.  Update comment.
	* gthr-posix95.h (__gthread_active_init): Delete.
	(__gthread_active_p): Do activity check here.
	Don't include errno.h on hppa-hpux.  Update comment.
	* config.gcc (hppa[12]*-*-hpux11*): Define extra_parts.
	* config/pa/pa64-hpux.h (LIB_SPEC): When -static is specified, only
	add -lpthread when -mt or -pthread is specified.
	* config/pa/pa-hpux11.h (LIB_SPEC): likewise.
	(LINK_GCC_C_SEQUENCE_SPEC): Define.
	* config/pa/t-pa-hpux11 (LIBGCCSTUB_OBJS): Define.
	(stublib.c, pthread_default_stacksize_np-stub.o,
	pthread_mutex_lock-stub.o, pthread_mutex_unlock-stub.o,
	$(T)libgcc_stub.a): Add methods.
	* config/pa/t-pa64 (LIBGCCSTUB_OBJS): Add pthread stubs.
	(stublib.c, pthread_default_stacksize_np-stub.o,
	pthread_mutex_lock-stub.o, pthread_mutex_unlock-stub.o): Add methods.
	* config/pa/stublib.c (pthread_default_stacksize_np, pthread_mutex_lock,
	pthread_mutex_unlock): New stubs.

2011-01-26  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/44469
	* cfgcleanup.c (try_optimize_cfg): Iterate in CFG layout mode too
	after removing trivially dead basic blocks.

2011-01-25  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47411