@@ -1,3 +1,12 @@
+2011-01-31  Nathan Froyd  <froydnj@codesourcery.com>
+
+	Backport from mainline:
+	2010-12-30  Nathan Froyd  <froydnj@codesourcery.com>
+
+        PR target/44606
+        * reload1.c (choose_reload_regs): Don't look for equivalences for
+        output reloads of constant loads.
+
 2011-01-30  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* doc/install.texi (hppa-hp-hpux10): Remove references to HP
